<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.eric.password.SecondActivity">


    <Spinner
        android:id="@+id/spinnerID"
        android:layout_width="250dp"
        android:layout_height="28dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioGroup
        android:id="@+id/myRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#abf234"
        android:checkedButton="@+id/englishID"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="-2dp">

        <RadioButton
            android:id="@+id/englishID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/English" />

        <RadioButton
            android:id="@+id/spanishID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Spanish" />

    </RadioGroup>

    <TextView
        android:id="@+id/nameTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/nameTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameEditTextID"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/nameEditTextID" />

    <TextView
        android:id="@+id/addressTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/addressTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/addressEditTextID"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/addressEditTextID"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/emailEditTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/addressEditTextID"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/addressEditTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/nameEditTextID"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/nameEditTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerID"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/emailTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/emailTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/emailEditTextID"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/emailEditTextID" />

    <Button
        android:id="@+id/DateAndTimeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date and Time"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextID"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/profileID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/DateAndTimeID"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
